--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,22 @@
-version: '3'
+version: '3.7'
 services:
   java-srv:
-    build:
-      context: java-srv
-    volumes:
-      - ./java-srv/log:/root/log
+    build: java-srv
+    ports:
+      - 80:9000
     depends_on:
-      - db
-    links:
-      - "db:db"
+      db:
+        condition: service_healthy
+        restart: true
 
   db:
     image: mariadb:latest
+    ports:
+      - 3306
+    healthcheck:
+      test: "pwd"
+    volumes:
+      - ./db/sql:/docker-entrypoint-initdb.d
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=true
       - MYSQL_USER=maria
